--- a/new-properties.html
+++ b/new-properties.html
@@ -88,19 +88,21 @@
         <div class="carousel-inner" role="listbox">
 
           <div class="item active">
-            <img src="..." alt="...">
+            <img src="images/new-1.jpg" alt="304 Olson Rd.">
             <div class="carousel-caption">
-              ...
+              <h3>304 Olson Rd.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa excepturi voluptatem perspiciatis molestiae voluptas unde omnis ipsum aperiam nam rem ullam, sequi, accusamus aliquam sint quos quidem culpa consectetur.</p>
             </div>
           </div>
-          
+
           <div class="item">
-            <img src="..." alt="...">
+            <img src="images/new-2.jpg" alt="9872 Freemont Dr.">
             <div class="carousel-caption">
-              ...
+              <h3>9872 Freemont Dr.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa excepturi voluptatem perspiciatis molestiae voluptas unde omnis ipsum aperiam nam rem ullam, sequi, accusamus aliquam sint quos quidem culpa consectetur.</p>
             </div>
         </div>
-          ...
+        
         </div>
 
           <!-- Controls -->
